[gd_scene load_steps=4 format=2]

[ext_resource path="res://assets/enemy1.png" type="Texture" id=1]
[ext_resource path="res://Enemy.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[node name="Enemy" type="Area2D"]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="shape" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="death_timer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="timeout" from="death_timer" to="." method="_on_death_timer_timeout"]
